@@ -94,7 +94,15 @@ Version 7.9 xx-xxx-09
 23. Steven Van Ingelgem's patch to CMakeLists.txt to change the name
     CMAKE_BINARY_DIR to PROJECT_BINARY_DIR so that it works when PCRE is
     included within another project.
-
+    
+24. Steven Van Ingelgem's patches to add more options to the CMake support,
+    slightly modified by me:
+    
+      (a) PCRE_BUILD_TESTS can be set OFF not to build the tests, including 
+          not building pcregrep. 
+     
+      (b) PCRE_BUILD_PCREGREP can be see OFF not to build pcregrep, but only
+          if PCRE_BUILD_TESTS is also set OFF, because the tests use pcregrep. 
 
 
 Version 7.8 05-Sep-08
